--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="keywords" content="" />
   <meta name="description" content="" />
   <title>BN Resin Art</title>
-<link rel="stylesheet" href="D:\my project\frontend_test\css\bootstrap.min.css">
-  <link rel="stylesheet" href="D:\my project\frontend_test\css\style.css">
-  <link rel="stylesheet" href="D:\my project\frontend_test\css\font-awesome.min.css">
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="css/font-awesome.min.css">
 <body dir="ltr">
 
   <!--  -->
@@ -411,9 +411,10 @@
         </div>
     </div>
 </footer>
-<script src="D:\my project\frontend_test\js\jav.js"></script>
+<script src="js/jav.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script src="D:\my project\frontend_test\JS\bootstrap.bundle.min.js"></script>
+
 </body>
 </head>
 
