تم تصحيح مسار الجافا اسكربت للبوتستراب

--- a/index.html
+++ b/index.html
@@ -416,10 +416,10 @@
         </div>
     </div>
 </footer>
-<script src="js/bootstrap.bundle.min.js"></script>
-<script src="JS/jav.js"></script>
-
-</body>
+<script src="bootstrap.bundle.min.js"></script>
+<script src="jav.js"></script>
 </head>
+</body>
+
 
 </html>
