--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@
     </div>
 </footer>
 <script src="bootstrap.bundle.min.js"></script>
-<script src="jav.js"></script>
+<script src="https://cdn.jsdelivr.net"></script>
 </head>
 </body>
 
