--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="dropdown">
 <button class="navbar-toggler mt-1 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
-    </button>
+    </button> 
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
        <div class="dropdown-content">
          <h5 class="collapse-h5 mx-5" >Menu</h5>
@@ -71,9 +71,10 @@
         </li>
 
       </ul>
-      </div>
-      </div>
+      </div>  <!-- ./dropdown-content  -->
+      </div> <!-- ./ collapse navbar-collapse -->
     </div>
+  </div>
   </div>
 </nav>
     <!--1-home section  -->
