--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
               <input class="form-control me-3 " type="search" placeholder="Search"aria-label="Search">
           <button class="btn btn-outline-success align-content-between" type="submit">Search</button>
           </form>
-          <div class="dropdown">
+          <div class="dropdown-menu">
 <button class="navbar-toggler mt-1 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
       <span class="navbar-toggler-icon"></span>
     </button> 
@@ -73,10 +73,10 @@
       </ul>
       </div>  <!-- ./dropdown-content  -->
       </div> <!-- ./ collapse navbar-collapse -->
-    </div>
-  </div>
-  </div>
-</nav>
+    </div> <!-- ./ dropdown -->
+  </div> <!-- ./ d-flex align-items-center  w-100 d-lg-none -->
+  </div> <!-- ./ container-fluid flex-column justify-content-between -->
+</nav> <!--./ navbar navbar-default navbar-fixed-top navbar-expand-lg bg-body-tertiary navbar-light  -->
     <!--1-home section  -->
   <div class="home p-4" id="1">
     <div class=" container ">
