--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         </div>
     </div>
 </footer>
-<script src="https://cdn.jsdelivr.net"></script>
+<script src="https://raw.githack.com"></script>
 </head>
 </body>
 
