--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
         </div>
     </div>
 </footer>
-<script src="https://raw.githack.com"></script>
 </head>
+  <script src="https://cdn.jsdelivr.net"></script>
 </body>
 
 
