--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
     </div>
 </footer>
 </head>
-  <script src="https://cdn.jsdelivr.net"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
 
