--- a/index.html
+++ b/index.html
@@ -379,8 +379,6 @@
     </div>
 </footer>
 
-<script src="js/bootstrap.bundle.min.js"></script>
+<script src="./js/bootstrap.bundle.min.js"></script>
 </body>
-
-
 </html>
