--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="css/font-awesome.min.css">
+</head>
 <body dir="ltr">
 
   <!--  -->
-  <nav class="navbar navbar-default navbar-fixed-top navbar-expand-lg bg-body-tertiary navbar-light">
-  <div class="container-fluid flex-column justify-content-between ">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary navbar-light ">
+  <div class="container-fluid flex-column  ">
     <!-- القائمة العادية للشاشات الكبيرة -->
-          <div class=" collapse navbar-collapse flex-grow-1 container-fluid ">
-            <!-- Logo -->
+          <div class=" collapse navbar-collapse flex-grow-1 w-100 "id="navbarDesktop">
     <a class="navbar-brand " href="#">
       <img src="images/ChatGPT Image Aug 11, 2025, 06_04_45 AM.png" style="width: 4rem">
     </a>
@@ -42,37 +42,37 @@
     </a>
        
 
-    <form class="d-flex align-items-start d-lg-none flex-grow-1 form-2 " role="search">
-              <input class="form-control me-3 " type="search" placeholder="Search"aria-label="Search">
-          <button class="btn btn-outline-success align-content-between" type="submit">Search</button>
+    <form class="d-flex  flex-grow-1 form-2 " role="search">
+              <input class="form-control me-2 " type="search" placeholder="Search"aria-label="Search">
+          <button class="btn btn-outline-success " type="button">Search</button>
           </form>
-          <div class="dropdown">
-<button class="navbar-toggler mt-1 ms-3" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavbar">
+        
+<button class="navbar-toggler  ms-2 " type="button" data-bs-toggle="collapse" data-bs-target="#mohamed"aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="collapsibleNavbar">
-       <div class="dropdown-content">
-         <h5 class="collapse-h5 mx-5" >Menu</h5>
-      <ul class="navbar-nav menu-list mx-2 ">
+</div>
+    <div class="collapse navbar-collapse mx-2 " id="mohamed">
+   <div class="d-lg-none py-3">
+         <h5 class=" px-3" >Menu</h5>
+      <ul class="navbar-nav menu-list px-3  ">
         <li class="nav-item">
-          <a class="nav-link  header-address active" href="#1">Home</a>
+          <a class="nav-link  header-address active" href="#1" >Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  header-address" href="#2">About</a>
+          <a class="nav-link  header-address" href="#2" >About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link header-address  text-nowrap" href="#3">Photo Library</a>
+          <a class="nav-link header-address  text-nowrap" href="#3" >Photo Library</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link  header-address" href="#">Price</a>
+          <a class="nav-link  header-address" href="#" >Price</a>
         </li>
         <li class="nav-item">
           <a class="nav-link  header-address" href="#4">Contact</a>
         </li>
 
       </ul>
-      </div>
-      </div>
+   </div>
     </div>
   </div>
 </nav>
@@ -416,10 +416,7 @@
         </div>
     </div>
 </footer>
-<script src="bootstrap.bundle.min.js"></script>
-<script src="jav.js"></script>
-</head>
+<script src="JS/bootstrap.bundle.min.js"></script>
+<script src="JS/jav.js"></script>
 </body>
-
-
 </html>
